Kubernetes/Jenkins/jenkins-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - name: jenkins
        image: jenkinsci/blueocean
        ports:
          - name: http-port
            containerPort: 8080
          - name: jnlp-port
            containerPort: 50000
        volumeMounts:
          - name: jenkins-vol
            mountPath: /var/jenkins_vol
          - mountPath: /var/run/docker.sock
            name: docker-socket
      volumes:
        - name: jenkins-vol
          emptyDir: {}
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
